--- a/Ausarbeitung/Umsetzung/UmsetzungSchnittstellenservices.tex
+++ b/Ausarbeitung/Umsetzung/UmsetzungSchnittstellenservices.tex
@@ -1,4 +1,4 @@
-\section{Auth-Service: Geräteregistrierung und HMAC-Authentifizierung}
+\section{Auth-Service: Geräteregistrierung und \\HMAC-Authentifizierung}
 Der Auth-Service implementiert die sichere Registrierung und Anmeldung von Controllern mittels eines Challenge-Response-Verfahrens auf Basis eines vorab geteilten Geheimnisses (PSK). Dieser Dienst ist als Flask-Webanwendung realisiert und stellt HTTP-Routen für die Controller-Initialisierung, -Verifikation sowie eine Admin-Registrierung bereit. Er bildet damit das sicherheitskritische Bindeglied zwischen neuen Geräten und der Systeminfrastruktur: 
 Geräte erhalten hier ihre individuellen Messaging-Zugangsdaten, sofern sie einen kryptographischen Besitznachweis erbringen. Im Folgenden werden die Architektur und der Ablauf des Auth-Service beschrieben, gefolgt von besonderen Implementierungsdetails wie der PSK-Überprüfung, Wiederanlaufbarkeit und der automatischen Broker-Konfiguration.
 \subsection{Architektur und persistente Datenhaltung}
@@ -11,10 +11,10 @@ Der Auth-Service ist als Flask-Applikation mit dokumentierter REST-API (via Swag
     Dies ermöglicht es, eingehende Antworten eindeutig der zuvor ausgegebenen Challenge zuzuordnen, selbst bei parallelen Anfragen.
     \item Solace Credentials: bereits für Controller erstellte Zugangs-Credentials für den Message Broker (Solace). Pro Gerät wird hier der erzeugte Broker-Benutzername und das Passwort abgelegt, um bei wiederholter Authentifizierung nicht erneut einen Broker-Account anlegen zu müssen.
 \end{enumerate}
-Die Konfigurationsdaten werden auf dem Container-Dateisystem unter /config/auth\_config.json verwaltet und durch Volume-Mounting persistent gehalten. Dadurch bleiben Registrierung und vergebene Credentials auch beim Neustart des Dienstes erhalten – ein wesentlicher Aspekt für Wiederanlaufbarkeit. Ergänzend hält der Auth-Service eine Datenbankverbindung (PostgreSQL via psycopg2) bereit, um neue Controller auch in der zentralen Systemdatenbank (sensora) zu registrieren. In der Tabelle sensora.controllers werden u.a. Device-ID, Modell, Besitzer und ein vom System generierter geheimer Schlüssel abgelegt. Letzterer unterscheidet sich vom PSK und dient ggf. anderen Zwecken (z.B. der Kommunikation mit externen Anwendungen), ohne das eigentliche PSK offenzulegen. Die doppelte Ablage (Datei und DB) der Registrierungsdaten mag auf den ersten Blick redundant erscheinen, ermöglicht jedoch sowohl schnelle lokale Zugriffe während des Auth-Handshakes als auch die Integration ins relationale Gesamtdatenmodell.
+Die Konfigurationsdaten werden auf dem Container-Dateisystem unter \\ /config/auth\_config.json verwaltet und durch Volume-Mounting persistent gehalten. Dadurch bleiben Registrierung und vergebene Credentials auch beim Neustart des Dienstes erhalten – ein wesentlicher Aspekt für Wiederanlaufbarkeit. Ergänzend hält der Auth-Service eine Datenbankverbindung (PostgreSQL via psycopg2) bereit, um neue Controller auch in der zentralen Systemdatenbank (sensora) zu registrieren. In der Tabelle sensora.controllers werden u.a. Device-ID, Modell, Besitzer und ein vom System generierter geheimer Schlüssel abgelegt. Letzterer unterscheidet sich vom PSK und dient ggf. anderen Zwecken (z.B. der Kommunikation mit externen Anwendungen), ohne das eigentliche PSK offenzulegen. Die doppelte Ablage (Datei und DB) der Registrierungsdaten mag auf den ersten Blick redundant erscheinen, ermöglicht jedoch sowohl schnelle lokale Zugriffe während des Auth-Handshakes als auch die Integration ins relationale Gesamtdatenmodell.
 
 \subsection{Ablauf der Geräte-Registrierung und Authentifizierung}
-Der Auth-Service bietet drei Haupt-Endpoints, die den Lebenszyklus eines Geräts abbilden: (a) Registrierung eines neuen Controllers (nur Admin), (b) Initialisierung des Authentifizierungs-Handshakes durch das Gerät und (c) Verifikation der Challenge-Response. 
+Der Auth-Service bietet drei Haupt-Endpoints, die den Lebenszyklus eines Geräts abbilden: (a) Registrierung eines neuen Controllers (nur Admin), (b) Initialisierung des Authentifizierungs-Handshakes durch das Gerät und (c) Verifikation der \\ Challenge-Response. 
 
 Der Authentifizierungsablauf erfolgt in mehreren Schritten:
 \begin{enumerate}
@@ -23,10 +23,10 @@ Der Authentifizierungsablauf erfolgt in mehreren Schritten:
     \item Challenge-Response (Gerät → Auth-Service): Nach Erhalt der Challenge berechnet das Gerät die Antwort: Es verwendet sein geheimes Token und wendet darauf die gleiche Hash-Funktion an, die auch der Server kennt. Im Code wird dazu HMAC-SHA256 genutzt, wobei das Token als Schlüssel und der Challenge-String als Nachricht dient. Das Ergebnis ist die Challenge-Response (Hex-String). Diese Antwort schickt das Gerät zurück an den Auth-Service, zusammen mit seinem token\_hash (zur Identifikation der Challenge) und meist einem Benutzernamen oder Kontoinformationen des Eigentümers. Der Auth-Service schlägt nun in seiner Konfiguration den Eintrag zum token\_hash nach: Dort findet er das ursprünglich registrierte Token (PSK) und die zugehörige Controller-ID. Sollte kein Eintrag existieren, wird der Prozess abgebrochen – das Gerät war nie registriert oder der Hash unbekannt (Fehler 403). Andernfalls vergleicht der Server die vom Gerät gesendete HMAC-Antwort mit dem erwarteten Wert, den er selbst berechnet (hmac.compare\_digest() verhindert Timing-Angriffe bei der String-Bewertung). Stimmen Response und eigener Wert überein, ist bewiesen, dass das Gerät das geheime Token besitzt und somit authentisch ist. Dieses Challenge-Response-Verfahren stellt eine sichere Authentifizierung dar\cite{hmacRFC}, ohne das PSK selbst über das Netzwerk zu senden. Ein abgehörter Challenge/Response-Wert kann später nicht wiederverwendet werden, da bei der nächsten Anmeldung eine andere Challenge zum Einsatz kommt (kein statisches Passwort)
     \item Broker-Zugangsdaten erstellen: Nach erfolgreicher Verifizierung entfernt der Auth-Service die verwendete Challenge (Verbrauch der einmaligen Challenge) und fährt mit der Provisionierung des Geräts für das Messaging-System fort. Hier greift eine weitere wichtige Implementierungsentscheidung: Der Service konfiguriert den Solace-MQTT-Broker dynamisch über dessen Management-API (SEMP v2). Konkret wird geprüft, ob für den Controller bereits Broker-Zugangsdaten in solace\_credentials vorliegen. Ist dies der erste erfolgreiche Auth-Vorgang für dieses Gerät, generiert der Service mittels der Hilfsfunktion create\_solace\_user(controller\_id) einen dedizierten Broker-Account:
     \begin{enumerate}
-        \item Es wird ein eindeutiger Client-Username für den Controller erstellt (z.B. controller\_ab12... gekürzt auf Basis der ID) und ein zufälliges Passwort (secrets.token\_urlsafe(32)).
-        \item Für feingranulare Zugriffskontrolle richtet der Service ein eigenes ACL-Profil auf dem Broker ein. Dies geschieht über HTTP-Aufrufe an die SEMPv2-Konfigurationsschnittstelle des Solace-Brokers. Das ACL-Profil für den Controller erlaubt ausschließlich die für diesen Anwendungsfall nötigen Operationen:
+        \item Es wird ein eindeutiger Client-Username für den Controller erstellt (z.B. controller\_ab12... gekürzt auf Basis der ID) und ein zufälliges Passwort \\ (secrets.token\_urlsafe(32)).
+        \item Für feingranulare Zugriffskontrolle richtet der Service ein eigenes ACL-Profil auf dem Broker ein. Dies geschieht über HTTP-Aufrufe an die \\SEMPv2-Konfigurationsschnittstelle des Solace-Brokers. Das ACL-Profil für den Controller erlaubt ausschließlich die für diesen Anwendungsfall nötigen Operationen:
         \begin{enumerate}
-            \item Publish-Erlaubnis: Das Gerät darf nur auf seinem eigenen Topic-Pfad Messwerte publizieren. Im Prototoll wird das Topic-Muster sensora/v1/send/{controller\_id} verwendet. Über SEMP wird ein Topic Exception hinzugefügt, die genau dieses Topic für Publish freigibt (alle anderen werden per Default “disallow” gesetzt).
+            \item Publish-Erlaubnis: Das Gerät darf nur auf seinem eigenen Topic-Pfad Messwerte publizieren. Im Prototoll wird das \\ Topic-Muster sensora/v1/send/{controller\_id} verwendet. Über SEMP wird ein Topic Exception hinzugefügt, die genau dieses Topic für Publish freigibt (alle anderen werden per Default “disallow” gesetzt).
             \item Subscribe-Erlaubnis: Analog erhält das Gerät das Recht, Sollwert-Nachrichten zu abonnieren, die an sein spezifisches Target-Topic gesendet werden. Dies ist typischerweise sensora/v1/receive/{controller\_id}/targetValues. Auch hierfür wird programmgesteuert eine Ausnahme im ACL-Profil hinterlegt. Damit ist sichergestellt, dass der Controller nur Nachrichten empfängt, die explizit an ihn adressiert sind (und z.B. keine fremden Gerätedaten).
         \end{enumerate}
         \item Nachdem ACL-Profil und Berechtigungen erfolgreich angelegt wurden, erstellt der Service über die SEMP-API den Broker-Client-User und weist ihm dieses ACL-Profil zu. Sollte einer der Schritte fehlschlagen (z.B. aufgrund bereits existierender Einträge oder Verbindungsfehler zum Broker), bricht die Funktion ab und der Auth-Vorgang resultiert in einem Server-Fehler (HTTP 500). Im Erfolgsfall erhält der Auth-Service nun ein Credential-Paket bestehend aus Broker-URL, Username und Passwort für den neuen Controller.
@@ -72,7 +72,7 @@ Im Gegensatz zu den zuvor beschriebenen Webservices läuft der Database Writer o
             \item Als nächstes wird geprüft, ob der spezifische Sensor bereits in der Datenbank angelegt ist. Die Sensoren sind in der Tabelle sensora.sensors modelliert, mit Primärschlüssel sid. Falls das SELECT ergibt, dass dieser Sensor noch nicht existiert, interpretiert der Service dies als erstmalige Meldung eines neuen Sensors an diesem Controller. In unserem Systemdesign könnten Sensoren dynamisch erkannt werden (z.B. wenn ein Controller ein neues Sensormodul bekommt). In so einem Fall legt der Database Writer automatisch einen neuen Sensor-Datensatz in der DB an. Hierfür entnimmt er der Nachricht, falls vorhanden, Meta-Informationen über den Sensor (im JSON ggf. enthalten unter "sensor\_info"). Im Code wird die erste Value-Nachricht auf sensor\_info geprüft und daraus z.B. der Sensortyp (ilk, z.B. "humidity" oder "temperature") und Einheit (unit, z.B. "\%", "°C") extrahiert. Diese werden zusammen mit der Sensor-ID und der Controller-ID in sensora.sensors eingefügt. Dadurch wird der Sensor dem System bekannt gemacht. Wichtig: Beim Insert wird plant = NULL gesetzt, da initial der Sensor noch keiner Pflanze zugeordnet ist. Nach diesem Insert wird sofort ein commit durchgeführt, damit der neue Sensor auch in weiteren Schritten verfügbar ist. Zudem loggt das System die Anlage des Sensors.
             \item Zuordnungsprüfung: Ein kritischer Aspekt ist, dass Messwerte nur gespeichert werden sollen, wenn klar ist, welcher Pflanze sie zugeordnet sind. Im Datenmodell hat jeder Sensor optional einen Fremdschlüssel auf sensora.plants. Direkt nach dem Insert (oder wenn Sensor schon existierte) wird daher plant\_id aus dem Sensor-Datensatz ausgelesen. Ist plant\_id NULL (Sensor keiner Pflanze zugeordnet), bricht die Funktion ab ohne die Messwerte zu speichern. Dieser Schritt stellt sicher, dass Daten erst dann persistiert werden, wenn die organisatorische Verknüpfung hergestellt wurde –  um zu vermeiden, dass "verwaiste" Messwerte in der Datenbank landen, die keiner Pflanze zugeordnet sind. In der Praxis würde ein Nutzer in der Applikation also zunächst einen Sensor einer Pflanze (Topf) zuweisen, bevor Werte fließen. Nicht zugeordnete Sensoren melden zwar ihren Status (wodurch last\_call aktualisiert wird), aber ihre Werte werden bis zur Zuweisung verworfen (im Code durch Log "Sensor ist keiner Pflanze zugeordnet. Werte werden nicht gespeichert." gekennzeichnet).
             
-            \item Werte-Insert: Falls ein plant\_id vorhanden ist, iteriert der Service über alle übermittelten Messwerte im values Array. Jeder Eintrag enthält typischerweise einen Zeitstempel (timestamp) und einen numerischen Wert (value). Wenn kein Timestamp angegeben ist, wird im Code "CURRENT\_TIMESTAMP" als Platzhalter genutzt, was die DB veranlasst, den Einfügezeitpunkt zu nehmen. Für jeden Wert generiert der Service eine eindeutige ID (vid via UUID4) und führt ein INSERT in die Tabelle sensora.values aus. Dabei werden Wert, Timestamp, Sensor-ID und Plant-ID gespeichert. Die Verwendung einer eigenen UUID für jeden Messwert garantiert, dass Einträge eindeutig sind; alternativ hätte man ein Serien-ID der DB nutzen können – hier zeigte sich aber der Designwunsch nach verteilbar eindeutigen IDs (was in IoT-Systemen mit mehreren Quellen sinnvoll sein kann). Nach dem Schleifendurchlauf über alle Werte werden die Insertionen per conn.commit() in der DB finalisiert. Abschließend wird die DB-Verbindung geschlossen. Im Log erscheint dann pro Sensor eine Bestätigung ("Alle Werte für Sensor X gespeichert.").
+            \item Werte-Insert: Falls ein plant\_id vorhanden ist, iteriert der Service über alle übermittelten Messwerte im values Array. Jeder Eintrag enthält typischerweise einen Zeitstempel (timestamp) und einen numerischen Wert (value). Wenn kein Timestamp angegeben ist, wird im Code\\ "CURRENT\_TIMESTAMP" als Platzhalter genutzt, was die DB veranlasst, den Einfügezeitpunkt zu nehmen. Für jeden Wert generiert der Service eine eindeutige ID (vid via UUID4) und führt ein INSERT in die Tabelle sensora.values aus. Dabei werden Wert, Timestamp, Sensor-ID und Plant-ID gespeichert. Die Verwendung einer eigenen UUID für jeden Messwert garantiert, dass Einträge eindeutig sind; alternativ hätte man ein Serien-ID der DB nutzen können – hier zeigte sich aber der Designwunsch nach verteilbar eindeutigen IDs (was in IoT-Systemen mit mehreren Quellen sinnvoll sein kann). Nach dem Schleifendurchlauf über alle Werte werden die Insertionen per conn.commit() in der DB finalisiert. Abschließend wird die DB-Verbindung geschlossen. Im Log erscheint dann pro Sensor eine Bestätigung ("Alle Werte für Sensor X gespeichert.").
             \item Fehler während der DB-Operationen werden aufgefangen und als Fehler geloggt, ohne dass der gesamte Service abstürzt. Sollte z.B. während der Inserts ein DB-Fehler auftreten, würde zwar dieser Aufruf fehlschlagen, aber der Message Handler an sich fängt die Exception und beendet nicht den Prozess (siehe nächster Punkt).
         \end{enumerate}
         \item Message Acknowledgement: Nachdem alle Sensoren einer Nachricht verarbeitet wurden, bestätigt der Database Writer dem Broker den erfolgreichen Empfang mittels receiver.ack(message). Dies ist ein wichtiger Schritt im Zusammenspiel mit der persistenten Queue: Erst durch das Acknowledge wird die Nachricht aus der Queue entfernt. Sollte der Service abstürzen oder es käme zu einem nicht behandelten Fehler vor dem Ack, würde die Nachricht in der Queue bleiben und später erneut zugestellt werden können (garantierte mindestens-einmal-Zustellung). Im implementierten Code wird das Ack nur im erfolgreichen JSON-Verarbeitungsfall aufgerufen. Bei bestimmten Fehlern, z.B. JSON-Parsing-Error oder falls essentielle Felder fehlen, wird kein Ack gesendet, was bedeutet, dass die Nachricht in der Queue verbleibt. Im Log wird ein Hinweis ausgegeben ("Nachricht ist kein gültiges JSON" oder "Ungültige Nachricht. Controller-ID fehlt."), aber ein Ack fehlt. Dieses Verhalten könnte zu einer erneuten Zustellung führen (je nach Broker-Einstellung) oder die Nachricht blockiert die Queue. Im aktuellen Setup von Solace würde eine nicht bestätigte Nachricht in einer durable Queue verbleiben; der Consumer könnte z.B. nach einem Timeout neu gestartet werden, um es erneut zu versuchen. Hier wäre eventuell eine Verbesserung, solche Nachrichten nach x Versuchen in eine Dead Message Queue zu verschieben – jedoch ist dies im Code nicht implementiert. Somit wird sich darauf verlassen, dass gut formatierte Nachrichten ankommen. Die bewusste Entscheidung, bei unverarbeitbaren Nachrichten kein Ack zu senden, spiegelt einen Anspruch auf Datenintegrität: Lieber bleibt eine fehlerhafte Nachricht liegen (und ein Admin greift ein), als dass sie fälschlich als verarbeitet markiert wird.
@@ -80,7 +80,7 @@ Im Gegensatz zu den zuvor beschriebenen Webservices läuft der Database Writer o
     \end{enumerate}
 \end{enumerate}
 Zusätzlich zur Callback-Verarbeitung hat der Database Writer einen Nebenprozess zur Überwachung der Sensor-Aktivität:
-Timeout-Überprüfung: Mithilfe eines einfachen Endlosschleife-Timers im Hauptthread wird in regelmäßigen Abständen (jede Minute, gemäß CHECK\_INTERVAL = 60 Sekunden) die Funktion check\_sensor\_timeouts() ausgeführt. Diese öffnet eine DB-Verbindung und führt ein Update auf der Sensors-Tabelle aus, um alle Sensoren, deren last\_call älter als 5 Minuten ist, auf Status 'error' zu setzen. Damit wird ein Timeout-Mechanismus realisiert: Wenn ein Sensor 5 Minuten lang keine Daten gesendet hat (und vorher auf 'active' stand), gilt er als potenziell offline oder ausgefallen. Im Datenbankmodell wird dies durch status = 'error' kenntlich gemacht. Dieser Mechanismus ergänzt das oben erwähnte Heartbeat-Tracking. Der Zähler wird nach jedem Lauf zurückgesetzt. Durch die Schleife mit time.sleep(1) wird der CPU-Verbrauch minimal gehalten.
+Timeout-Überprüfung: Mithilfe eines einfachen \\ Endlosschleife-Timers im Hauptthread wird in regelmäßigen Abständen (jede Minute, gemäß \\ CHECK\_INTERVAL = 60 Sekunden) die Funktion check\_sensor\_timeouts() ausgeführt. Diese öffnet eine DB-Verbindung und führt ein Update auf der Sensors-Tabelle aus, um alle Sensoren, deren last\_call älter als 5 Minuten ist, auf Status 'error' zu setzen. Damit wird ein Timeout-Mechanismus realisiert: Wenn ein Sensor 5 Minuten lang keine Daten gesendet hat (und vorher auf 'active' stand), gilt er als potenziell offline oder ausgefallen. Im Datenbankmodell wird dies durch status = 'error' kenntlich gemacht. Dieser Mechanismus ergänzt das oben erwähnte Heartbeat-Tracking. Der Zähler wird nach jedem Lauf zurückgesetzt. Durch die Schleife mit time.sleep(1) wird der CPU-Verbrauch minimal gehalten.
 
 \section{Setpoint API: Sollwert-Vorgabe via REST und MQTT}
 Die Setpoint API ermöglicht es, aus dem System heraus Steuerungswerte an die Mikrocontroller zu senden – konkret Sollwerte für bestimmte Sensoren (z.B. Feuchtigkeits-Sollwert für die Bewässerungssteuerung). Damit wird das System bidirektional: Nicht nur melden Sensoren Zustände, sondern Aktoren können angesteuert werden. Der Dienst ist als kleiner Flask-basierter Webservice realisiert, der eine REST-Endpoint bereitstellt, über den ein Sollwert gesetzt werden kann. Intern publiziert der Service diesen Sollwert dann als MQTT-Nachricht auf den Broker, sodass der Ziel-Controller ihn empfängt. Im Grunde handelt es sich also um einen Protokollübergang von HTTP zu MQTT.
@@ -107,7 +107,7 @@ Der Setpoint-Service stellt den Endpoint /sollwert (HTTP POST) bereit. Der typis
     }
     \end{lstlisting}
     Diese Struktur ist angelehnt an das Format, das ggf. vom Gerät erwartet wird (eine Liste von Zielwerten für bestimmte Sensoren/Aktoren). Es wird also der Device-ID und Sensor-ID nochmals eingebettet, damit das Gerät die Nachricht zuordnen kann.
-    \item Als nächstes bestimmt der Service das Ziel-Topic für die MQTT-Nachricht. Gemäß der in Auth-Service eingerichteten Konvention wird das Topic sensora/v1/receive/<controller\_id>/targetValues genutzt. Darauf ist der betreffende Controller (bzw. dessen MQTT-Client) berechtigt zu lauschen. Dieses Topic adressiert somit genau den gewünschten Controller.
+    \item Als nächstes bestimmt der Service das Ziel-Topic für die MQTT-Nachricht. Gemäß der in Auth-Service eingerichteten Konvention wird das Topic \\ sensora/v1/receive/<controller\_id>/targetValues genutzt. Darauf ist der betreffende Controller (bzw. dessen MQTT-Client) berechtigt zu lauschen. Dieses Topic adressiert somit genau den gewünschten Controller.
     \item Der Service publiziert die Nachricht über den Solace-Broker: Hierzu nutzt er die vorab aufgebaute Broker-Verbindung und einen Publisher, der als persistent message publisher initialisiert wurde. Die Nachricht wird mit dem oben genannten Topic abgesendet. Der Broker sorgt dann dafür, dass – sofern der Controller online ist und das Topic abonniert hat – die Nachricht an diesen zugestellt wird. Sollte der Controller momentan nicht verbunden sein, greift je nach Broker-Einstellung die Persistierung: Entweder wurde eine Queue für solche Sollwert-Nachrichten eingerichtet (vgl. mögliches sensor\_setpoints Queue), oder im MQTT-Kontext übernimmt der Broker das Speichern bei QoS>0. Da der Publisher hier als "persistent" konfiguriert ist, lässt sich ableiten, dass die Nachricht als durable versendet wird, was in MQTT-Terminologie etwa QoS 1 entspricht (mindestens einmal zustellen). Solace bietet für MQTT-Clients mit dauerhafter Session auch an, solche Nachrichten zwischenzuspeichern, was vermutlich hier genutzt wird.
     \item Die Setpoint API gibt dem HTTP-Aufrufer eine Erfolgsmeldung zurück (HTTP 200, JSON {"status": "success"}). Damit ist der Vorgang für den Benutzer abgeschlossen. Im Hintergrund allerdings wird nun der Controller die Nachricht empfangen und z.B. seine Konfiguration anpassen (dies ist Teil der Geräte-Firmware und außerhalb dieses Service-Scopes, aber essentiell für den Regelkreis der Bewässerung).
 \end{enumerate}
