--- a/Ausarbeitung/Theoretische Grundlagen/TheoretischeGrundlagenSchnittstellen.tex
+++ b/Ausarbeitung/Theoretische Grundlagen/TheoretischeGrundlagenSchnittstellen.tex
@@ -1,11 +1,8 @@
-\section{Theoretische Grundlagen zu Solace und Sicherheitsmechanismen im Auth-Service}
 
-In modernen verteilten Systemen spielen Messaging-Plattformen eine zentrale Rolle, um die Kommunikation zwischen Komponenten zu entkoppeln und ereignisgesteuerte Architekturen zu ermöglichen. Insbesondere \textit{Publish/Subscribe}-Systeme erlauben es, Datenproduzenten und -konsumenten lose zu koppeln: Ein \textit{Message Broker} vermittelt Nachrichten von Publishern an Subscriber, ohne dass diese direkt voneinander wissen müssen \cite{Eugster2003}. Dieses Kapitel behandelt zunächst die Architektur und Funktionsweise des \textit{Solace PubSub+} Event Brokers. Anschließend werden die im Auth-Service eingesetzten sicherheitsrelevanten Verfahren – namentlich HMAC, Fernet-Verschlüsselung, sowie Tokenisierung in Verbindung mit Pre-Shared Keys und Challenge-Response – theoretisch erläutert. Ziel ist es, die Grundlagen dieser Technologien sowie ihr Zusammenspiel darzustellen, wobei auf anerkannte Literatur und offizielle Dokumentation Bezug genommen wird.
-
-\subsection{Solace PubSub+ Event Broker}
+\section{Solace PubSub+ Event Broker}
 Solace PubSub+ ist ein Enterprise-Messaging-Broker, der als zentrales Vermittlungssystem in einer ereignisgesteuerten Architektur dient. Er ermöglicht die asynchrone Kommunikation zwischen verteilten Anwendungen über ein publish/subscribe-basiertes Paradigma. Nachfolgend werden Aufbau und Hauptmerkmale dieses Brokers erläutert – insbesondere die Nutzung von Topics und Queues, die Unterstützung des MQTT-Protokolls, Mechanismen zur Zugriffskontrolle (ACLs) sowie die Konfiguration über die SEMP-API. Abschließend erfolgt ein Vergleich mit anderen Messaging-Lösungen.
 
-\subsubsection{Aufbau eines Message Brokers und Solace-Architektur}
+\subsection{Aufbau eines Message Brokers und Solace-Architektur}
 
 Ein Message Broker wie Solace PubSub+ fungiert als Vermittler zwischen Sendern und Empfängern von Nachrichten. Publisher schicken Nachrichten an den Broker, welcher diese anhand von Metadaten (meist Topics) an interessierte Subscriber weiterleitet. Dadurch sind Publisher und Subscriber entkoppelt – weder muss der Publisher die Empfänger kennen, noch der Subscriber die Quelle der Nachricht \cite{Eugster2003}. Diese Entkopplung erhöht die Skalierbarkeit und Flexibilität des Systems erheblich. Der Broker übernimmt Verantwortung für das Routing, Filtering und ggf. Persistieren der Nachrichten.
 
@@ -34,7 +31,7 @@ Abbildung \ref{fig:broker-arch} zeigt schematisch die grundlegende Funktionswei
 \label{fig:broker-arch}
 \end{figure}
 
-\subsubsection{Topics und Queues in Solace PubSub+}
+\subsection{Topics und Queues in Solace PubSub+}
 
 Solace PubSub+ verwendet ein hierarchisches Topic-System zur Adressierung von Nachrichten. Topics sind benannte Kanäle, die typischerweise durch mittels Schrägstrich / getrennte Hierarchieebenen strukturiert sind (z.B. Sensor/Temperatur/Aussen). Publisher veröffentlichen Nachrichten auf einem bestimmten Topic, und Subscriber können sich auf Topics (bzw. Muster davon) abonnieren. Eine Stärke von Solace ist, dass Topics \textit{dynamisch} und ohne Vorab-Konfiguration genutzt werden können – der Broker akzeptiert beliebige Topic-Strings und leitet Nachrichten entsprechend weiter. Für die Filterung unterstützen Topics Platzhalter: Das Zeichen * steht für genau ein Hierarchie-Level (ein Wort zwischen den Trennzeichen), während > als Wildcard für beliebig viele nachfolgende Hierarchieebenen fungiert. Beispielsweise würde ein Subscriber auf Topic Sensor/Temperatur/* alle Temperaturwerte aller Sensoren erhalten, während Sensor/> sämtliche Nachrichten im Topic-Pfad beginnend mit Sensor matcht. Diese flexiblen Wildcards erlauben eine inhaltliche Filterung der Ereignisse bereits auf Broker-Seite.
 
@@ -42,23 +39,23 @@ Neben der direkten Verteilung über Topics bietet Solace die Möglichkeit, Topic
 
 Im Vergleich zu anderen Messaging-Brokern vereinheitlicht Solace damit das sonst oft getrennte Modell von Topics (für Pub/Sub) und Queues (für Punkt-zu-Punkt) zu einem flexiblen Konstrukt. Während z.B. in RabbitMQ Nachrichten immer an Exchanges gesendet und dann per Binding-Key auf Queues verteilt werden müssen, kann in Solace direkt auf einem Topic publiziert werden, das entweder von Clients abonniert oder von Queues “belauscht” wird \cite{SolaceTopicWildcard}. Auch JMS unterscheidet zwischen Topic und Queue als verschiedenen Destination-Typen; Solace als JMS-Provider mappt jedoch JMS-Topics und -Queues intern auf das gleiche einheitliche Event-Model, was Verwaltung und Integration erleichtert.
 
-\subsubsection{MQTT und topic-basiertes Routing}
+\subsection{MQTT und topic-basiertes Routing}
 
 Das \textit{Message Queuing Telemetry Transport} (MQTT) Protokoll ist ein offener Standard für Leichtgewichts-Messaging, der vor allem im IoT-Umfeld verbreitet ist. Solace PubSub+ unterstützt MQTT in den Versionen 3.1.1 und 5.0 gemäß dem OASIS-Standard \cite{SolaceMQTT}. MQTT-Clients können sich mit dem Broker verbinden und Nachrichten auf MQTT-Topics publizieren bzw. abonnieren. Ein wesentliches Konzept von MQTT ist das topic-basierte Routing – analog zum oben beschriebenen Topic-System. MQTT-Themenpfade sind ebenfalls hierarchisch mit / aufgebaut; als Wildcards dienen + (ein Level) und \# (mehrere Level). Solace setzt diese MQTT-Semantik um und übersetzt sie intern auf das eigene Topic-Format. Beispielsweise entspricht ein MQTT-Subscription auf sensors/+/humidity einem Solace-Topicfilter sensors/*/humidity. Dadurch können MQTT-Publisher und -Subscriber nahtlos mit anderen Solace-Clients interagieren. So ist es möglich, dass ein Gerät via MQTT auf sensors/room1/humidity sendet, während ein Java-Anwendung über JMS das Topic sensors/\> abonniert und somit die Nachricht erhält – der Broker übernimmt die Protokollkonvertierung und das Routing \cite{SolaceProtocols}.
 
 MQTT sieht per Spezifikation keine expliziten Queues vor; wenn ein MQTT-Subscriber offline geht (und QoS 1 oder 2 verwendet), puffert der Broker die Nachrichten in einer Session-Queue, die beim Wiederverbinden ausgeliefert werden. Solace erweitert diese Möglichkeiten insofern, als dass man persistente Weiterleitung an benannte Queues nutzen kann, indem man MQTT-Themen mit Solace-Queues verknüpft (wie zuvor beschrieben). Rein mit MQTT-Mitteln kann ein Device also nur mittels Durable Session (Clean Session = false) Nachrichten nachliefern lassen, während Solace auch langfristige Persistenz über MQTT hinaus bietet. Allerdings gelten Protokolleinschränkungen: z.B. unterstützt MQTT v3.1.1 keine Bearbeitung von auf einer Queue gespeicherten Nachrichten, da das Konzept im Protokoll fehlt. Daher wird in Szenarien mit Bedarf an fortgeschrittenem Queueing ggf. ein anderes Protokoll (AMQP 1.0 oder Solaces eigenes API/SMF) verwendet \cite{SolaceDaprMQTT}. Nichtsdestotrotz unterstreicht die MQTT-Fähigkeit von Solace die Flexibilität des Brokers, heterogene Clients in ein gemeinsames Topic-basiertes Kommunikationsgeflecht einzubinden.
 
-\subsubsection{Access Control Lists (ACLs)}
+\subsection{Access Control Lists (ACLs)}
 
 In einem Multi-User-Messaging-System ist feingranulares Zugriffsmanagement essenziell, um Sicherheit und Mandantentrennung zu gewährleisten. Solace PubSub+ bietet hierzu \textit{Access Control List (ACL) Profiles} an, mit denen reguliert wird, welche Aktionen ein Client ausführen darf. Ein ACL-Profil bestimmt erstens, ob sich ein Client überhaupt mit dem Broker/Message-VPN verbinden darf, und zweitens, welche Topics er publizieren oder abonnieren darf \cite{SolaceACL}. Konkret bestehen ACL-Profile aus Regeln, die Verbindungsversuche sowie Topic-Zugriffe kontrollieren. Für jede dieser Kategorien (Connect, Publish-Topic, Subscribe-Topic, sowie Subscribe auf Shared-Queues) lässt sich ein Standardverhalten definieren – entweder \textit{allow} (erlauben) oder \textit{deny} (standardmäßig verweigern) – und es können Ausnahmeregeln (\textit{exceptions}) für spezifische Topics oder Topic-Muster hinzugefügt werden.
 
 Jedem Client, der sich authentifiziert, wird ein ACL-Profil zugewiesen (entweder direkt am Client-Username konfiguriert oder – falls LDAP-Authentifizierung genutzt wird – über Gruppenzuordnung). Nach erfolgreicher Authentisierung prüft der Broker sämtliche Aktionen des Clients gegen die ACL des zugewiesenen Profils. Beispielsweise kann ein ACL-Profil erlauben, dass der Client nur auf Topics unterhalb von ClientA/> publizieren darf und alle anderen Topics geblockt werden. Versucht der Client eine Nachricht auf ein nicht erlaubtes Topic zu senden oder eine unberechtigte Subscription anzulegen, verweigert der Broker die Operation. Auf diese Weise können unterschiedliche Clients auf unterschiedliche Topic-Räume beschränkt werden, was im IoT-Umfeld z.B. dazu genutzt wird, dass jedes Gerät nur auf seinem eigenen Topic-Präfix senden/empfangen darf \cite{AvnetPSK}. ACL-Profile sind damit ein zentrales Sicherheitsmerkmal, um unerlaubten Datenzugriff zu verhindern und eine saubere Mandantentrennung innerhalb eines Brokers (bspw. zwischen verschiedenen Anwendungen im selben Message VPN) sicherzustellen.
 
-\subsubsection{Konfiguration über die SEMP-API}
+\subsection{Konfiguration über die SEMP-API}
 
 Die Administration eines Solace-Brokers kann neben grafischen Tools und dem CLI auch vollständig automatisiert über eine REST-basierte Managementschnittstelle erfolgen – die \textit{Solace Element Management Protocol} API in Version 2 (\textbf{SEMP v2}). SEMP v2 stellt eine REST/HTTP-JSON API bereit, mit der sich der Broker programmatisch konfigurieren und überwachen lässt \cite{SolaceSEMP}. Über definierte Endpunkte können Management-Clients z.B. Queues oder Topic-Endpunkte anlegen, ACL-Profile definieren, den Status von Clients und VPNs abfragen oder Verwaltungsaktionen (wie das Leeren einer Queue) durchführen. Die SEMP-API ist in drei Bereiche gegliedert: \begin{itemize}\setlength\itemsep{0pt} \item \textbf{Config}: Änderung und Abfrage der Konfigurationsobjekte \\(z.B. \verb|POST /SEMP/v2/config/msgVpns/{vpn}/queues| zum Anlegen einer Queue). \item \textbf{Monitor}: Lesezugriff auf betrieblichen Status und Metriken (z.B. Statistiken einer Queue, Anzahl der Clients etc.). \item \textbf{Action}: Auslösen von Aktionen, die keinen dauerhaften Konfigurationszustand ändern (z.B. \textit{Purge} einer Queue, Failover umschalten). \end{itemize} SEMP v2 ist via OpenAPI-Spezifikation beschrieben und ermöglicht so die automatisierte Generierung von Client-Bibliotheken \cite{SolaceSEMP}. In der Praxis kann somit z.B. ein Auth-Service mittels SEMP beim Deployment sicherstellen, dass benötigte Topics, Queues und ACLs im Broker eingerichtet sind, ohne manuell die Admin-Oberfläche bedienen zu müssen. Die Verwendung einer Management-API erleichtert die Integration des Brokers in Infrastructure-as-Code und DevOps-Prozesse. Insbesondere in Cloud-Umgebungen mit dynamischer Skalierung kann der Broker so automatisiert auf neue Services oder geänderte Sicherheitsrichtlinien konfiguriert werden.
 
-\subsubsection{Vergleich mit anderen Messaging-Systemen}
+\subsection{Vergleich mit anderen Messaging-Systemen}
 Solace PubSub+ steht in Konkurrenz zu einer Reihe von Messaging-Systemen, die teils unterschiedliche Architekturen aufweisen. Im Folgenden werden einige charakteristische Unterschiede kurz herausgestellt:
 \textbf{RabbitMQ}: RabbitMQ ist ein verbreiteter Open-Source Message Broker, der das AMQP 0.9.1 Protokoll verwendet. Ähnlich wie Solace unterstützt RabbitMQ Publish/Subscribe und Queueing, jedoch meist nur über AMQP (Multi-Protokoll-Fähigkeit ist bei RabbitMQ nur über Plugins begrenzt möglich). RabbitMQ nutzt ein Exchange-Queue-Modell: Publisher senden an Exchanges, welche die Nachrichten anhand von Routing-Keys an Queues binden. Solace hingegen erlaubt das direkte Publizieren auf Topics, die intern sowohl von Abonnements als auch von Queues “gelesen” werden können \cite{SolaceTopicWildcard}. In Solace ist somit das Routing-Konzept etwas einfacher, da kein separater Exchange-Schritt sichtbar ist. Bezüglich Performance skaliert Solace durch seine optimierte Architektur und optional spezialisierte Hardware-Appliances auf sehr hohe Durchsätze, während RabbitMQ für viele Anwendungsfälle ausreichend, aber in extremen Szenarien früher an Grenzen stoßen kann. RabbitMQ bietet dafür eine große Flexibilität durch Plugins (etwa für unterschiedliche Auth-Backends, Shovel/Federation für verteilte Setups usw.), wohingegen Solace viele Funktionen nativ integriert (etwa eingebaute Hochverfügbarkeit, Replay-Funktionalität, etc.).
 \textbf{Apache Kafka}: Kafka verfolgt einen anderen Ansatz als klassische Message Broker. Es ist eigentlich eine verteilte Commit-Log-Plattform, die primär für Streaming von Datenströmen und Event Sourcing konzipiert ist. Im Gegensatz zu Solace, das Nachrichten direkt an Subscriber weiterleitet oder zwischenpuffert, schreibt Kafka alle Nachrichten fortlaufend in Partitionen auf Disk. Consumer lesen diese logischen Partitionen in eigenem Tempo und behalten Zustände wie den Lese-Offset. Dadurch eignet sich Kafka hervorragend für das Replaying vergangener Events und das Verteilen großer Datenmengen auf viele Konsumenten, hat aber keinen Broker, der aktiv zu Clients zustellt – die Clients holen vielmehr die Daten. Solace dagegen ist auf Live-Zustellung optimiert: Nachrichten werden typischerweise verworfen, wenn kein Abnehmer da ist (außer es existiert eine persistente Queue). Man könnte vereinfacht sagen, Kafka speichert Streams dauerhaft (Standard ist Tage bis unbegrenzt) und garantiert dadurch Zustellung an spätere Konsumenten, während Solace klassischere Messaging-Semantiken bietet, wo persistente Nachrichten gezielt zugestellt und nach Bestätigung gelöscht werden (ähnlich JMS). Für use-cases im Auth-Service-Umfeld (kurzlebige Ereignisse, Befehle, Responses) ist ein Broker wie Solace passender; Kafka spielt seine Stärken bei Analyse- und Loggingdaten aus \cite{Kreps2011}.
@@ -66,7 +63,7 @@ Solace PubSub+ steht in Konkurrenz zu einer Reihe von Messaging-Systemen, die te
 Zusammenfassend lässt sich festhalten, dass Solace PubSub+ aufgrund seines architektonischen Designs (vereinheitlichtes Topic/Queue-Model, Multi-Protokoll-Unterstützung, hohe Performance) eine besondere Rolle unter den Messaging-Systemen einnimmt. Die theoretischen Grundlagen dieses Brokers – Entkopplung durch Pub/Sub, Hierarchie-Topics, etc. – bilden die Basis für den praktischen Einsatz im Rahmen des Auth-Service, wo Solace die Nachrichtenkommunikation absichert und steuert.
 
 
-\subsection{Sicherheitsrelevante Technologien im Auth-Service}
+\section{Sicherheitsrelevante Technologien im Auth-Service}
 
 Im Auth-Service kommen mehrere kryptographische und sicherheitstechnische Verfahren zum Einsatz, um die Authentifizierung und Kommunikation abzusichern. In diesem Abschnitt werden die folgenden Konzepte erläutert:
 \textbf{HMAC} (Hash-based Message Authentication Code) – ein Verfahren zur Gewährleistung von Nachrichtenintegrität und -authentizität.
@@ -74,7 +71,7 @@ Im Auth-Service kommen mehrere kryptographische und sicherheitstechnische Verfah
 \textbf{Tokenisierung mit PSK und Challenge-Response} – das Zusammenspiel von vorab geteilten Schlüsseln (Pre-Shared Keys), Challenge-Response-Authentifizierung und der Verwendung von Tokens im Authentifizierungsprozess.
 Ziel ist es, die kryptographischen Grundlagen, Funktionsweisen und Sicherheitseigenschaften dieser Techniken darzustellen, um das Verständnis für ihre Umsetzung im Auth-Service zu schaffen.
 
-\subsubsection{HMAC: Hash-basierter Message Authentication Code}
+\subsection{HMAC: Hash-basierter Message Authentication Code}
 
 Ein \textit{Message Authentication Code} (MAC) ist eine Prüfsumme, die unter Verwendung eines geheimen Schlüssels berechnet wird und es Empfängern ermöglicht, die Integrität und Authentizität einer Nachricht zu verifizieren. Der Sender berechnet einen MAC-Wert über die Nachricht und sendet ihn mit; der Empfänger kann mit dem geteilten Geheimnis denselben MAC berechnen und vergleichen. Stimmen die Werte überein, ist sichergestellt, dass die Nachricht unverändert ist und vom legitimen Sender stammt (solange der Schlüssel geheim bleibt).
 
@@ -176,6 +173,3 @@ In summe ermöglicht die Kombination aus Challenge-Response und Token eine effiz
 
 Abschließend sei erwähnt, dass Pre-Shared-Keys und symmetrische Tokens vor allem in Szenarien zum Einsatz kommen, wo eine Ende-zu-Ende-Vertrauensstellung zwischen genau zwei Parteien besteht (hier: Gerät und Auth-Service) und die Verwaltungsaufwände für PSKs tragbar sind. In großen verteilten Systemen könnte man alternativ auch Public-Key-Verfahren einsetzen (z.B. Client-Zertifikate und JWTs mit digitaler Signatur), die andere Vor- und Nachteile bieten. Für die Zwecke des betrachteten Auth-Service – vermutlich die Absicherung einer beschränkten Anzahl bekannter Devices – liefert die beschriebene Kombination jedoch einen gut geeigneten Kompromiss aus Sicherheit und Einfachheit. Alle verwendeten Bausteine (HMAC, Fernet/AES, Challenge-Response) gelten als kryptographisch solide. Somit bilden sie eine zuverlässige Grundlage, um im Auth-Service Vertraulichkeit, Integrität und Authentifizierung sicherzustellen und gegen gängige Angriffe (Abhören, Manipulation, Replay) gewappnet zu sein.
 
-\subsection{Zusammenfassung}
-
-In diesem Kapitel wurden die theoretischen Grundlagen zu Solace PubSub+ und den Sicherheitsmechanismen im Auth-Service dargestellt. Solace fungiert als leistungsfähiger Event Broker mit flexiblem Topic/Queue-Modell, MQTT-Unterstützung, ACL-basiertem Zugriffsmanagement und automatisierbarer Konfiguration – all dies bildet das Rückgrat für die Kommunikationsinfrastruktur. Auf der Sicherheitsseite sorgen HMAC-basierte Challenge-Response-Protokolle in Kombination mit Fernet-verschlüsselten Tokens und Pre-Shared Keys dafür, dass Authentifizierungsvorgänge zuverlässig und geschützt ablaufen. Diese Konzepte schaffen gemeinsam einen vertrauenswürdigen Rahmen, innerhalb dessen der Auth-Service und die angeschlossenen Komponenten sicher miteinander interagieren können..
