add frontend part

--- a/Ausarbeitung/Präamble/acronyms.tex
+++ b/Ausarbeitung/Präamble/acronyms.tex
@@ -3,5 +3,22 @@
 \addcontentsline{toc}{section}{Abkürzungsverzeichnis}
 \begin{acronym}[STRIDE]
 	%\acro{EXP}{example}	-> Im text verwenden mit \ac{EXP}	
-	
+	\acro{SPA}{Single-page application}
+	\acro{MPA}{Multi-page application}
+	\acro{REST}{Representational State Transfer}
+	\acro{SEO}{Search-Engine Optimization}
+	\acro{SSR}{Server-Side-Rendering}
+	\acro{DOM}{Document Object Model}
+	\acro{UCD}{User-Centered Design}
+	\acro{UI}{User Interface}
+	\acro{UX}{User Experience}
+	\acro{POC}{Proof of Concept}
+	\acro{TDD}{Test-Driven Development}
+	\acro{KI}{Künstliche Intelligenz}
+	\acro{SFC}{Single File Component}
+	\acro{ResNet50}{50-layer Residual Network}
+	\acro{CNN}{Convolutional Neural Network}
+	\acro{FC}{Fully Connected}
+	\acro{ResNet}{Residual Network}
+	\acro{i18n}{Internationalisierung}
 \end{acronym}
