Fixing some issues

--- a/Ausarbeitung/acronyms.tex
+++ b/Ausarbeitung/acronyms.tex
@@ -94,3 +94,94 @@
 	short= CORS,
 	long =Cross-Origin Resource Sharing
 }
+
+\DeclareAcronym{SPA}{
+  short = SPA,
+  long  = Single-page application
+}
+
+\DeclareAcronym{MPA}{
+  short = MPA,
+  long  = Multi-page application
+}
+
+\DeclareAcronym{REST}{
+  short = REST,
+  long  = Representational State Transfer
+}
+
+\DeclareAcronym{SEO}{
+  short = SEO,
+  long  = Search-Engine Optimization
+}
+
+\DeclareAcronym{SSR}{
+  short = SSR,
+  long  = Server-Side-Rendering
+}
+
+\DeclareAcronym{DOM}{
+  short = DOM,
+  long  = Document Object Model
+}
+
+\DeclareAcronym{UCD}{
+  short = UCD,
+  long  = User-Centered Design
+}
+
+\DeclareAcronym{UI}{
+  short = UI,
+  long  = User Interface
+}
+
+\DeclareAcronym{UX}{
+  short = UX,
+  long  = User Experience
+}
+
+\DeclareAcronym{POC}{
+  short = POC,
+  long  = Proof of Concept
+}
+
+\DeclareAcronym{TDD}{
+  short = TDD,
+  long  = Test-Driven Development
+}
+
+\DeclareAcronym{KI}{
+  short = KI,
+  long  = Künstliche Intelligenz
+}
+
+\DeclareAcronym{SFC}{
+  short = SFC,
+  long  = Single File Component
+}
+
+\DeclareAcronym{ResNet50}{
+  short = ResNet50,
+  long  = 50-layer Residual Network
+}
+
+\DeclareAcronym{CNN}{
+  short = CNN,
+  long  = Convolutional Neural Network
+}
+
+\DeclareAcronym{FC}{
+  short = FC,
+  long  = Fully Connected
+}
+
+\DeclareAcronym{ResNet}{
+  short = ResNet,
+  long  = Residual Network
+}
+
+\DeclareAcronym{i18n}{
+  short = i18n,
+  long  = Internationalisierung
+}
+
