--- a/Ausarbeitung/listings-golang.sty
+++ b/Ausarbeitung/listings-golang.sty
@@ -36,7 +36,7 @@
   morestring=[b]{"},
   morestring=[s]{r"}{"}, % raw string literals
   morestring=[s]{b"}{"}, % byte string literals
-  morestring=[s]{r#"}{"#}, % raw string with one hash
+  % morestring=[s]{r#"}{"#}, % raw string with one hash
   morestring=[s]{r##"}{"##}, % raw string with two hashes
   keywordstyle=\color{blue}\bfseries,
   commentstyle=\color{gray}\ttfamily,
