--- a/Ausarbeitung/main.tex
+++ b/Ausarbeitung/main.tex
@@ -54,7 +54,7 @@ hidelinks %Links nicht einrahmen
 %\newcommand{\acspace}{\xspace\hspace{1em}}
 
 \makeatletter
-\renewcommand*{\aclabelfont}[1]{\textbf{\acsfont{#1}\acspace}}
+%\renewcommand*{\aclabelfont}[1]{\textbf{\acsfont{#1}\acspace}}
 \makeatother
 
 
@@ -167,48 +167,45 @@ hidelinks %Links nicht einrahmen
 	% ------------- Hauptteil -------------
 
 	\chapter{Theoretische Grundlagen}
-	\input{Theroretische Grundlagen/TheoretischeGrundlagenSchnittstellen}
 	\input{Theoretische Grundlagen/TG_Scrum}
 	\input{Theoretische Grundlagen/TG_APIs}
 	\input{Theoretische Grundlagen/TG_Designprinzipien}
-	%\input{Theroretische Grundlagen/TG_example}
+	\input{Theoretische Grundlagen/TheoretischeGrundlagenSchnittstellen}
 	\input{Theoretische Grundlagen/SPAs}
-	\input{Theoretische Grundlagen/MobileApps}
 	\input{Theoretische Grundlagen/UIUX}
+	\input{Theoretische Grundlagen/MobileApps}
     \input{Theoretische Grundlagen/Testing}
 
 	\newpage
 	
 	\chapter{Anforderungen}
-	\input{Anforderungen/Frontend}
     Für das Projekt Sensora gelten hohe Anforderungen an Zuverlässigkeit, Sicherheit, Erweiterbarkeit und Datenintegrität. In diesem Kapitel werden die formellen Anforderungen an das Backend sowie an die zugrunde liegende Datenbankarchitektur getrennt voneinander dargestellt. Ziel ist es, eine tragfähige Grundlage für die technische Umsetzung zu schaffen.
   \input{Anforderungen/AnforderungenAnSchnittstellenServices}
   \input{Anforderungen/Anf_Backend}
-	%\input{Anforderungen/Anforderungen_example}
+	\input{Anforderungen/Frontend}
 	
 	\newpage
 	
 	\chapter{Auswahl der Technologien}
-	\input{Auswahl der Technologien/Vue}
-	\input{Auswahl der Technologien/Pinia}
-	\input{Auswahl der Technologien/CSS}
-	\input{Auswahl der Technologien/Capacitor}
-	\input{Auswahl der Technologien/I18n}
-  \input{Auswahl der Technologien/AuswahlDerTechnologienSchnittstellenservices}
 	\input{Auswahl der Technologien/AdT_Programmiersprache_BFF}
 	\input{Auswahl der Technologien/AdT_Datenbankentscheidung}
-	%\input{Auswahl der Technologien/AdT_example}
+  \input{Auswahl der Technologien/AuswahlDerTechnologienSchnittstellenservices}
+	\input{Auswahl der Technologien/Capacitor}
+	\input{Auswahl der Technologien/Vue}
+	\input{Auswahl der Technologien/CSS}
+	\input{Auswahl der Technologien/I18n}
+	\input{Auswahl der Technologien/Pinia}
 	
 	\newpage
 	
 	\chapter{Umsetzung}
-  \input{Umsetzung/UmsetzungSchnittstellenservices}
 	\input{Umsetzung/Ums_Datenmodellierung und Datenfluss}
+  \input{Umsetzung/UmsetzungSchnittstellenservices}
 	%\input{Umsetzung/Umsetzung_example}
 	\input{Umsetzung/Frontend-Architektur}
-	\input{Umsetzung/UIUX}
 	\input{Umsetzung/KI-Erkennung}
 	\input{Umsetzung/Spezifische_Komponenten_Frontend}
+	\input{Umsetzung/UIUX}
 	
 	\newpage
 
@@ -232,17 +229,17 @@ hidelinks %Links nicht einrahmen
 	\pagestyle{fancy}
 	\fancyhead[R]{LITERATUR}
 
-	\chapter*{Literaturverzeichnis}
+	%\chapter*{Literaturverzeichnis}
 	\addcontentsline{toc}{chapter}{Literaturverzeichnis}
 	\printbibliography
 	\newpage
 
 	%------------- Anhang -------------
 	\cleardoublepage
-	\fancyhead[R]{ANHANG}
+	%\fancyhead[R]{ANHANG}
 
-	\chapter*{Anhang}
-	\addcontentsline{toc}{chapter}{Anhang}
+	%\chapter*{Anhang}
+	%\addcontentsline{toc}{chapter}{Anhang}
 
 	% Hier Anhänge einfügen:
 	%\input{./Anhang/sensorwerte}
